@@ -25,7 +25,12 @@ class TestDocumentModelGenerator < Test::Unit::TestCase
   #   bare_setup - place this in setup method to create the APP_ROOT folder for each test
   #   bare_teardown - place this in teardown method to destroy the TMP_ROOT or APP_ROOT folder after each test
   
-  def test_generator_without_options
+  def test_generator_without_extension
+    name = "MyDocument"
+    proc { run_generator('document_model', [name], sources) }.should.raise RubiGen::UsageError
+  end
+  
+  def test_generator_with_correct_options
     name = "MyDocument"
     extension = 'mydocext'
     
